<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PropuestoAndroid1</string>
    <string name="action_settings">Settings</string>
    <string name="curso">Curso:</string>
    <string-array name="datCurso">
        <item>.Net</item>
        <item>Java</item>
        <item>Cisco</item>
    </string-array>
    <string name="nombre">Nombre:</string>
    <string name="apellido">Apellido:</string>
    <string name="telefono">Telefono:</string>
    <string name="horario">Horario:</string>
    <string name="manana">Mañana</string>
    <string name="tarde">Tarde</string>
    <string name="noche">Noche</string>
    <string name="enviar">Enviar</string>
    <color name="fondo">#D3D3D3</color>
    <color name="texto">#569</color>
    <string name="cerrar">Cerrar</string>

</resources>
